30-tools/matomo/maria-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: matomo
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: bitnami/mariadb:11.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
