30-tools/matomo/matomo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
        - name: web
          image: matomo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
