30-tools/matomo/maria-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: matomo
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: mariadb
