30-tools/matomo/matomo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: matomo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: matomo
